data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_562.wast
;; 3. **Test Name: Dynamic Condition Infinite Loop**    - **Description**: Implement a loop where the body modifies a local variable, but the condition for `br_if` always ensures the loop re-evaluation.    - **Constraint Checked**: Correct computation and checking of dynamic conditions within the loop.    - **Infinite Loop Relation**: Despite variable changes, the condition always causes the branch to loop back.

(assert_invalid
  (module
    (func (local i32)
      (loop $top (result i32)
        (local.set 0 (i32.add (local.get 0) (i32.const 1)))
        (br_if $top (i32.const 1))
      )
    )
  )
  "type mismatch"
)